--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </header>
         <main class="flex-1">
             <div class="flex flex-col">
-                <section class="relative bg-primary py-20 text-primary-foreground">
+                <section class="relative bg-primary text-primary-foreground">
                     <div class="container relative z-10 mx-auto px-4 py-12 sm:px-6 lg:px-8">
                         <div class="grid gap-12 md:grid-cols-2 md:items-center">
                             <div class="space-y-6">
