--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                             href="index.html">Início</a><a
                             class="text-sm font-medium transition-colors hover:text-primary"
                             href="#services">Serviços</a><a
-                            class="text-sm font-medium transition-colors hover:text-primary" href="#about">Sobre</a><a href="#contact"><button
+                            class="text-sm font-medium transition-colors hover:text-primary" href="#about">Sobre</a><a
+                            href="#contact"><button
                                 class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3">Agendar
-                                Consulta</button></a></nav>
+                                Sessão</button></a></nav>
             </div>
         </header>
         <main class="flex-1">
@@ -43,21 +44,20 @@
                                     class="inline-block rounded-lg bg-secondary/20 px-3 py-1 text-sm text-primary-foreground">
                                     Psicólogo em formação • Terapeuta ABA certificado</div>
                                 <h1 class="text-4xl font-bold tracking-tight sm:text-5xl md:text-6xl">Dannilo Carlos
-                                    Nogueira dos Santos</h1>
+                                </h1>
                                 <p class="text-lg text-primary-foreground/90 md:text-xl">
-                                    🧸 Terapeuta ABA <br>
-                                    🎓 Graduando em Psicologia (5/10) <br><br>
-
-                                    🧠 Foco Atual: <br>
-                                    - Terapeuta ABA com experiência prática. <br>
-                                    - Especialização em andamento no Modelo Denver (intervenção precoce e naturalista).
-                                    <br>
-                                    - Aperfeiçoamento em Acompanhamento Terapêutico (AT) para atuação em contextos reais
-                                    (escola, domicílio, comunidade). <br><br>
+                                <h2><strong>"A ciência não espera – e seu filho também não pode
+                                        esperar.</strong></h2><br>
+                                Crianças que iniciam o ABA nos primeiros anos têm até <strong>80% mais chances de
+                                    reduzir o
+                                    grau do autismo, segundo pesquisas.</strong> Não deixe o relógio biológico
+                                avançar sem agir.
+                                A ciência está do seu lado. Agende uma sessão e dê o primeiro passo hoje
+                                mesmo!"<br><br>
                                 </p>
                                 <div class="flex flex-col space-y-4 sm:flex-row sm:space-y-0 sm:space-x-4"><button
                                         class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-11 rounded-md px-8 bg-secondary text-secondary-foreground hover:bg-secondary/90">
-                                        <a href="#contact">Entre em Contato</a>
+                                        <a href="#contact">Agende sua sessão</a>
                                     </button><button
                                         class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-11 rounded-md px-8 border-secondary text-secondary bg-transparent hover:bg-secondary hover:text-primary"><a
                                             href="#services">Saiba Mais</a></button></div>
@@ -73,10 +73,11 @@
                 <section id="services" class="bg-background py-20">
                     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                         <div class="mx-auto max-w-3xl text-center">
-                            <h2 class="text-3xl font-bold tracking-tight text-primary sm:text-4xl">Meus serviços</h2>
-                            <p class="mt-4 text-lg text-muted-foreground">Oferecemos serviços de Análise do
-                                Comportamento Aplicada (ABA) para todas as idades, com foco especial em crianças e
-                                adolescentes.</p>
+                            <h2 class="text-3xl font-bold tracking-tight text-primary sm:text-4xl">O mundo de opções
+                                dentro da ABA</h2>
+                            <p class="mt-4 text-lg text-muted-foreground">Meu foco é criar planos individualizados,
+                                aliando ética, evidências científicas e sensibilidade às necessidades de cada família.
+                            </p>
                         </div>
                         <div class="mt-16 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
                             <div
@@ -184,8 +185,8 @@
                                     certificado, dedico-me a oferecer intervenções comportamentais baseadas em
                                     evidências científicas. Minha abordagem é centrada no cliente, respeitando suas
                                     necessidades individuais e contexto familiar.</p>
-                                <p class="text-lg text-foreground">Embora meu foco principal seja em crianças e
-                                    adolescentes, atendo pessoas de todas as idades, incluindo adultos e idosos.
+                                <p class="text-lg text-foreground">Embora meu foco principal seja em crianças, também
+                                    posso atender adolescentes em idade escolar.
                                     Acredito que a Análise do Comportamento Aplicada (ABA) pode beneficiar pessoas em
                                     qualquer fase da vida.</p>
                                 <p class="text-lg text-foreground">Minha prática é fundamentada nos princípios éticos da
@@ -277,73 +278,45 @@
                     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                         <div class="mx-auto max-w-3xl text-center">
                             <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Entre em Contato</h2>
-                            <p class="mt-4 text-lg text-primary-foreground/90">Pronto para começar a jornada de
-                                desenvolvimento comportamental? Entre em contato hoje para agendar uma avaliação
-                                inicial.</p>
+                            <p class="mt-4 text-lg text-primary-foreground/90">🌟 Você está a um passo de transformar o
+                                futuro do seu filho! 🌟<br>
+                                Intervenção precoce faz toda a diferença: Quanto antes começarmos, maiores as chances de
+                                reduzir desafios e potencializar habilidades.
+                            </p>
                         </div>
                         <div class="mt-16 grid gap-8 md:grid-cols-2">
                             <div class="space-y-6">
                                 <div>
                                     <h3 class="text-xl font-semibold">Localização</h3>
                                     <address class="mt-3 not-italic text-primary-foreground/90">
-                                        <p>Rua da Análise, 123</p>
-                                        <p>São Paulo, SP 12345-678</p>
+                                        <p>Rua Carlos Marighella</p>
+                                        <p>Recife - PE</p>
                                     </address>
                                 </div>
                                 <div>
                                     <h3 class="text-xl font-semibold">Informações de Contato</h3>
                                     <div class="mt-3 space-y-2 text-primary-foreground/90">
-                                        <p>Email: contato@abacomportamental.com.br</p>
-                                        <p>Telefone: (11) 98765-4321</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <h3 class="text-xl font-semibold">Horário de Atendimento</h3>
-                                    <div class="mt-3 space-y-2 text-primary-foreground/90">
-                                        <p>Segunda - Sexta: 8:00 - 19:00</p>
-                                        <p>Sábado: 9:00 - 14:00</p>
-                                        <p>Domingo: Fechado</p>
+                                        <a href="mailto:dannilocarlos@gmail.com">Email: dannilocarlos@gmail.com</a><br>
+                                        <a href="tel:5581981196750">Telefone: (81) 98119-6750</a>
                                     </div>
                                 </div>
                                 <div>
                                     <h3 class="text-xl font-semibold">Redes Sociais</h3>
-                                    <div class="mt-3 flex space-x-6"><a target="_blank" rel="noopener noreferrer"
-                                            class="text-primary-foreground hover:text-secondary transition-colors"
-                                            href="../external.html?link=https://instagram.com/"><svg
-                                                xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="lucide lucide-instagram h-8 w-8">
-                                                <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                                                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5"></line>
-                                            </svg><span class="sr-only">Instagram</span></a><a target="_blank"
-                                            rel="noopener noreferrer"
-                                            class="text-primary-foreground hover:text-secondary transition-colors"
-                                            href="../external.html?link=https://wa.me/5511987654321"><svg
-                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                                stroke-linejoin="round" class="h-8 w-8">
-                                                <path
-                                                    d="M17.498 14.382c-.301-.15-1.767-.867-2.04-.966-.273-.101-.473-.15-.673.15-.2.3-.767.966-.94 1.164-.173.199-.347.223-.646.075-.3-.15-1.267-.465-2.414-1.485-.893-.795-1.494-1.78-1.67-2.079-.173-.3-.018-.462.13-.61.134-.133.3-.347.45-.52.149-.174.199-.3.3-.498.099-.2.05-.374-.025-.524-.075-.15-.672-1.62-.922-2.206-.24-.584-.487-.51-.672-.51-.172 0-.371-.025-.571-.025-.2 0-.523.074-.797.359-.273.285-1.045 1.02-1.045 2.475s1.07 2.865 1.219 3.075c.149.21 2.096 3.2 5.076 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z">
-                                                </path>
-                                                <path
-                                                    d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z">
-                                                </path>
-                                            </svg><span class="sr-only">WhatsApp</span></a><a target="_blank"
-                                            rel="noopener noreferrer"
-                                            class="text-primary-foreground hover:text-secondary transition-colors"
-                                            href="../external.html?link=https://linkedin.com/"><svg
-                                                xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="lucide lucide-linkedin h-8 w-8">
-                                                <path
-                                                    d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z">
-                                                </path>
-                                                <rect width="4" height="12" x="2" y="9"></rect>
-                                                <circle cx="4" cy="4" r="2"></circle>
-                                            </svg><span class="sr-only">LinkedIn</span></a></div>
+                                    <div class="mt-3 flex space-x-6"><a href="https://www.instagram.com/psidannilo/">
+                                            <div><i class="bi bi-instagram"></i></div>
+                                            <span class="sr-only">Instagram</span>
+
+                                            <div class="mt-3 flex space-x-6"></div><a
+                                                href="https://api.whatsapp.com/send?phone=5581981196750&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20a%20terapia%20ABA%20e%20como%20ela%20pode%20ajudar%20meu%20filho%20a%20desenvolver%20as%20habilidades%20sociais%20que%20est%C3%A3o%20em%20atraso!">
+                                                <div><i class="bi bi-whatsapp"></i></div>
+                                                <span class="sr-only">WhatsApp</span>
+
+                                                <div class="mt-3 flex space-x-6"></div><a
+                                                    href="https://www.linkedin.com/in/dannilocn/">
+                                                    <div><i class="bi bi-linkedin"></i></div>
+                                                    <span class="sr-only">LinkedIn</span>
+                                                </a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="rounded-lg bg-white p-6 shadow-lg">
@@ -365,7 +338,7 @@
                                     <div><label for="message"
                                             class="block text-sm font-medium text-gray-700">Mensagem</label><textarea
                                             class="flex min-h-[80px] rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm mt-1 w-full"
-                                            id="message" name="message" rows="4" style="height: 167px;"></textarea>
+                                            id="message" name="message" rows="4" style="height: 125px;"></textarea>
                                     </div><button
                                         class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-10 px-4 py-2 w-full bg-primary text-primary-foreground hover:bg-primary/90"
                                         type="submit">Enviar Mensagem</button>
@@ -378,17 +351,23 @@
         </main>
         <footer class="w-full border-t border-border/40 bg-primary text-primary-foreground">
             <div class="container py-10">
-                <div class="grid grid-cols-1 gap-8">
+                <div class="grid grid-cols-1">
                     <div class="space-y-3">
-                        <h3 class="text-lg font-semibold">ABA Comportamental</h3>
-                        <p class="text-sm text-primary-foreground/80">Serviços de Análise do Comportamento Aplicada
-                            (ABA) para crianças, adolescentes, adultos e idosos.</p>
+                        <h3 class="text-lg font-semibold">ABA, Applied Behavior Analysis ou Análise do Comportamento
+                            Aplicada</h3>
+                        <p class="text-sm text-primary-foreground/80">Se trata de uma abordagem científica que utiliza
+                            princípios da aprendizagem e do comportamento para desenvolver habilidades sociais,
+                            comunicativas e cognitivas, principalmente em crianças com
+                            autismo (TEA). Ela identifica como fatores ambientais influenciam comportamentos, aplicando
+                            técnicas personalizadas para reduzir ações desafiadoras e reforçar comportamentos positivos,
+                            sempre com metas claras e medição constante de resultados.
+                        </p>
                     </div>
-                <div
-                    class="mt-8 border-t border-primary-foreground/20 pt-6 text-center text-sm text-primary-foreground/70">
-                    <p>© <!-- -->2025<!-- --> Feito com carinho por mim mesmo 💛. Todos os direitos reservados.</p>
+                    <div
+                        class="mt-8 border-t border-primary-foreground/20 pt-6 text-center text-sm text-primary-foreground/70">
+                        <p>© <!-- -->2025<!-- --> Feito com carinho por mim mesmo 💛. Todos os direitos reservados.</p>
+                    </div>
                 </div>
-            </div>
         </footer>
     </div>
 
