--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Dannilo Carlos - Terapeuta ABA</title>
     <meta name="description" content="Bem-vindo(a) ao meu espaço dedicado à terapia ABA e psicologia!" />
     <meta name="keywords"
-        content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia.">
+        content="Terapia ABA, autismo, psicologia comportamental, intervenção infantil, graduação em psicologia." />
     <script src="js/script.js"></script>
 </head>
 
@@ -65,7 +65,7 @@
                             <div
                                 class="relative mx-auto aspect-square max-w-md overflow-hidden rounded-full border-8 border-secondary/20">
                                 <img alt="Minha foto de perfil" width="600" height="600" decoding="async" data-nimg="1"
-                                    class="object-cover" style="color:transparent" src="src/foto_de_perfil.png" />
+                                    class="object-cover" style="color:transparent" src="src/foto_de_perfil.jpg" />
                             </div>
                         </div>
                     </div>
@@ -323,13 +323,13 @@
                                 <form class="space-y-4">
                                     <div class="grid gap-4 md:grid-cols-2">
                                         <div><label for="first-name"
-                                                class="block text-sm font-medium text-gray-700">Nome</label><input
+                                                class="block text-sm font-medium text-gray-700">Nome do responsável</label><input
                                                 class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm mt-1 w-full"
                                                 id="first-name" required="" name="first-name" /></div>
-                                        <div><label for="last-name"
-                                                class="block text-sm font-medium text-gray-700">Sobrenome</label><input
+                                        <div><label for="child-name"
+                                                class="block text-sm font-medium text-gray-700">Nome da criança</label><input
                                                 class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm mt-1 w-full"
-                                                id="last-name" required="" name="last-name" /></div>
+                                                id="child-name" required="" name="child-name" /></div>
                                     </div>
                                     <div><label for="phone" class="block text-sm font-medium text-gray-700">Telefone
                                             (WhatsApp)</label><input type="tel"
