adição do ícone

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="shortcut icon" type="imagex/png" href="src/icon.ico">
     <meta name="next-size-adjust" content="" />
     <title>Dannilo Carlos - Terapeuta ABA</title>
     <meta name="description" content="Bem-vindo(a) ao meu espaço dedicado à terapia ABA e psicologia!" />
